--- a/backend/package.json
+++ b/backend/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "groceryapp-vanjs-back",
+  "name": "backend",
   "version": "1.0.0",
-  "description": "",
+  "description": "GLA-JS Backend",
   "main": "server.js",
   "scripts": {
+    "server": "nodemon server.js",
     "start": "node server.js"
   },
   "keywords": [],
