--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,7 +2,7 @@
   "name": "frontend",
   "version": "1.0.0",
   "description": "GLA-JS Frontend",
-  "main": "src/app.js",
+  "main": "server.js",
   "author": "Michelle Rogers",
   "license": "ISC",
   "scripts": {
