--- a/backend/package.json
+++ b/backend/package.json
@@ -4,8 +4,9 @@
   "description": "GLA-JS Backend",
   "main": "server.js",
   "scripts": {
-    "server": "nodemon server.js",
-    "start": "node server.js"
+    "server": "pm2 start server.js --name GLA-JS",
+    "start": "node server.js",
+    "deploy": "cd ../frontend && yarn build && cd ../backend && yarn server"
   },
   "keywords": [],
   "author": "",
