--- a/backend/package.json
+++ b/backend/package.json
@@ -4,20 +4,18 @@
   "description": "GLA-JS Backend",
   "main": "server.js",
   "scripts": {
-    "server": "pm2 start server.js --name GLA-JS",
     "start": "node server.js",
-    "deploy": "cd ../frontend && yarn build && cd ../backend && yarn server",
-    "dev": "concurrently \"yarn start\" \"cd ../frontend && yarn serve\"",
-    "node-install": "cd ../frontend && yarn install && cd ../backend && yarn install"
+    "dev": "concurrently \"yarn start\" \"cd ../frontend && yarn serve\""
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "concurrently": "^7.1.0",
     "dotenv": "^14.3.2",
     "express": "^4.17.2",
-    "mongoose": "^6.1.8",
-    "pm2": "^5.2.0"
+    "mongoose": "^6.1.8"
+  },
+  "devDependencies": {
+    "concurrently": "^7.1.0"
   }
 }
