--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,9 @@
     "serve": "webpack serve",
     "watch": "webpack watch"
   },
+  "engines": {
+    "node": "16.x.x"
+  },
   "keywords": [],
   "babel": {
     "presets": [
